# patent-tutor-agent

./: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.claude/hooks/: auto-commit.sh
agents/expert_a/: README.md
agents/expert_b/: README.md
agents/judge/: README.md
agents/planner/: README.md
backend/: main.py
backend/app/: agent_runtime_config.py  artifacts.py  config.py  learner_store.py  learning_path.py  memory.py  middleware.py  questionnaire.py  (+2 more)
backend\app\rag\data\rag_chroma_db/: chroma.sqlite3
config/: agents.yaml
data/: learner_memory.json
docs/: README.md  agent-interface-spec.md  api-testing-guide.md  database-design-presentation-guide.md  database-entity-relationship-diagram.html  database-entity-relationship-diagram.md  database-relationship-diagram.html  demo-debugging.md  fastapi-layer-design.md  implementation-plan.md  memory-design-inspiration.md  memory-persistence.md  mysql-verification-guide.md  orchestrator-selection.md  patent-tutor-rdb-design.md  pylance-diagnostics-report.md  rag-design.md  rag-interface-spec.md  rag-selection.md  workflow-node-reference.md  workflow-technical-guide.md  竞赛方案汇报.docx
frontend/: README.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
rag/: README.md
scripts/: clean-lock-and-lock.ps1  langgraph-dev.ps1  langgraph-dev.sh  langgraph-stop.ps1  langgraph-stop.sh  refresh-db.ps1  run-api-journey.ps1  set-db-readonly.ps1
tests/: README.md  test_scaffold.py
(+225 files in other folders)
