[project]
name = "patent-tutor-agent"
version = "0.1.0"
description = "Backend agent orchestration scaffold for the patent tutoring multi-agent competition project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=1.0.0",
    "langchain-core>=1.4.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "structlog>=24.2.0",
    "tenacity>=8.5.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph-cli[inmem]>=0.4.29",
    "chromadb>=0.6.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "pymilvus>=3.0.0",
    "milvus-lite>=3.0",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["backend/tests"]
markers = [
    "unit: Tests using fake/mock LLM clients — fast, deterministic, no external API calls.",
    "integration: Tests that call real LLM APIs (requires valid .env API keys).",
]

